--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
              <%# right %>
              <div class="level-right">
                 <p class='level-item'> <%= link_to "Edit", edit_post_path(@post), class: "button" %></p>
-                <p class='level-item'> <a class="button is-danger">Delete</a></p>
+                <p class='level-item'> <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"}, class: "button is-danger" %></p>
              </div>
         </nav>
         <hr />
